=== Opus Primus changelog.txt ===
Last revised November 12, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2.3 ==
* Released ...

= Code =
= CSS =
* Reduced the citation font-size for better aesthetics

= Miscellaneous =

/** ------------------------------------------------------------------------- */
== Version 1.2.2 ==
* Released October 2013

= Code =
* Added conditional test rather than print both breadcrumbs (one empty)
* Additional i18n code corrections and enhancements
* Corrected i18n code for EXIF data
* Extracted $post_title management from `post_breadcrumb` method into the `breadcrumb_post_title` method
* Fixed issue with Gallery Post-Format being used when the `gallery` shortcode is not used.
* Fixed undefined offset when there is no image found in post

= CSS =
* Reduced all menu related elements with `z-index` property to a value of 1
* Removed `z-index` property from breadcrumb related elements
* Set the breadcrumbs background color to `#ffffff` (white)

= Miscellaneous
* Add documentation to the `first_linked_image` function
* Removed `table-stripe` class from Post-Format: Image tables
* Tested up to WordPress version 3.7

/** ------------------------------------------------------------------------- */
== Version 1.2.1 ==
* Released August 2013
* Removed `translation-ready` tag

/** ------------------------------------------------------------------------- */
== Version 1.2 ==
* Released August 2013

= Code =
* Added display of featured image centered at full size in single standard post format view
* Added full `featured_image` method call to single view of post formats audio, chat, quote, and status
* Added `get_author_description` method in Authors class
* Added filtered `comment_form_required_field_glyph` method in Comments class
* Added many new filters - see http://opusprimus.com/under-the-page/hooks-filters/ or `hooks-filters.txt` for a current list